src/test/ui/marker_trait_attr/region-overlap.stderr
error[E0283]: type annotations needed
  --> $DIR/region-overlap.rs:5:10
   |
LL | impl<'a> A for (&'static (), &'a ()) {}
   |          ^ cannot infer type for tuple `(&'static (), &'a ())`
   |
note: multiple `impl`s satisfying `(&'static (), &'a ()): A` found
  --> $DIR/region-overlap.rs:5:1
   |
LL | impl<'a> A for (&'static (), &'a ()) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | impl<'a> A for (&'a (), &'static ()) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0283]: type annotations needed
  --> $DIR/region-overlap.rs:6:10
   |
LL | impl<'a> A for (&'a (), &'static ()) {}
   |          ^ cannot infer type for tuple `(&'a (), &'static ())`
   |
note: multiple `impl`s satisfying `(&'a (), &'static ()): A` found
  --> $DIR/region-overlap.rs:5:1
   |
LL | impl<'a> A for (&'static (), &'a ()) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | impl<'a> A for (&'a (), &'static ()) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0283`.
